2008-12-09  Bastien Nocera  <hadess@hadess.net>

	* data/org.gnome.LircProperties.Mechanism.conf:
	Fix for changes in recent D-Bus versions (Closes: #563853)

0.3.1:

2008-10-27  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.ac: 0.3.1

2008-10-27  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/backend.py: Check which actions are
	passed to the backend, so we don't launch "stop ; rm -rf /"
	by accident (Closes: #558128)

2008-10-27  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/Makefile.am:
	* gnome_lirc_properties/backend.py:
	* gnome_lirc_properties/lirc.py:
	* gnome_lirc_properties/shellquote.py: Add shellquote helper
	from http://liw.iki.fi/liw/python-licosmamo/, quote and unquote
	configuration options from the hardware configuration file, so
	that 1) input devices with brackets in their names work, 2)
	arbitrary commands can't be added to the default lirc configuration
	file (Closes: #558127)

2008-10-27  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/hardware.py: Fix USB hiddev device (without
	a product or vendor ID) causing backtraces

2008-10-27  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/hardware.py: Fix the backend detecting
	devices without any keys (power buttons)

0.3.0:

2008-10-22  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.ac: 0.3.0
	* autogen.sh: Add hacks to make configure and distcheck easier on
	Fedora systems (the defaults are still good for Debian/Ubuntu systems)

	* Makefile.am:
	* data/Makefile.am:
	* help/Makefile.am:
	* help/es/legal.xml:
	* help/sv/legal.xml: Distcheck fixes

2008-10-22  Bastien Nocera  <hadess@hadess.net>

	* gnome_lirc_properties/policykit.py: Use
	"authorizes == yes" to make sure we don't tell the program
	we're authorised when the answer is auth_self_keep_always
	or similar (Closes: #556745)

2008-10-20  Bastien Nocera  <hadess@hadess.net>

	* data/20-x11-remotes.fdi: Add Dell USB keyboard hub